# ib-practica11-oop-cmake-marioguerra2002

Ejercicio1/: CMakeLists.txt  fechas.cc  funciones.cc  funciones.h  makefile
Ejercicio2/: CMakeLists.txt  complejo.cc  funciones.cc  funciones.h  makefile
